--- a/E8.House_Pricing_Kaggle/E8.House_Pricing_Kaggle.ipynb
+++ b/E8.House_Pricing_Kaggle/E8.House_Pricing_Kaggle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "XGBRegressor               110318.637918"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,208 +739,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'learning_rate': [0.0001,\n",
-       "  0.0011,\n",
-       "  0.0021,\n",
-       "  0.0031,\n",
-       "  0.0041,\n",
-       "  0.0051,\n",
-       "  0.0061,\n",
-       "  0.0071,\n",
-       "  0.0081,\n",
-       "  0.0091,\n",
-       "  0.0101],\n",
-       " 'n_estimators': [50, 60, 70, 80, 90, 100],\n",
-       " 'max_depth': [0, 4, 8, 12, 16]}"
+       "{'learning_rate': [0.015, 0.025],\n",
+       " 'n_estimators': [700, 800, 900, 1000, 1100, 1200],\n",
+       " 'max_depth': [5, 10, 15]}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "param_grid_GB = {\n",
-    "    'learning_rate': np.arange(0.0001, 0.011, 0.001).tolist(),\n",
-    "    'n_estimators': np.arange(50, 101, 10).tolist(),\n",
-    "    'max_depth': [np.arange(0, 20, 4).tolist()],\n",
+    "    'learning_rate': [0.015, 0.025],\n",
+    "    'n_estimators': np.arange(700, 1201, 100).tolist(),\n",
+    "    'max_depth': np.arange(5, 20, 5).tolist()\n",
     "}\n",
     "param_grid_GB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 330 candidates, totalling 1650 fits\n"
+      "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=5)]: Using backend LokyBackend with 5 concurrent workers.\n",
-      "[Parallel(n_jobs=5)]: Done  80 tasks      | elapsed:   25.0s\n",
-      "[Parallel(n_jobs=5)]: Done 240 tasks      | elapsed:  2.4min\n",
-      "[Parallel(n_jobs=5)]: Done 510 tasks      | elapsed:  5.6min\n",
-      "[Parallel(n_jobs=5)]: Done 880 tasks      | elapsed: 10.3min\n",
-      "[Parallel(n_jobs=5)]: Done 1340 tasks      | elapsed: 15.8min\n",
-      "[Parallel(n_jobs=5)]: Done 1650 out of 1650 | elapsed: 19.6min finished\n"
+      "[Parallel(n_jobs=5)]: Using backend LokyBackend with 5 concurrent workers.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>learning_rate</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>n_estimators</th>\n",
-       "      <th>score</th>\n",
-       "      <th>RMSLE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>12</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-0.067918</td>\n",
-       "      <td>0.260610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>329</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>16</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-0.070137</td>\n",
-       "      <td>0.264833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>8</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-0.070760</td>\n",
-       "      <td>0.266008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>0.0091</td>\n",
-       "      <td>12</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-0.075226</td>\n",
-       "      <td>0.274274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>12</td>\n",
-       "      <td>90</td>\n",
-       "      <td>-0.075273</td>\n",
-       "      <td>0.274359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>301</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>302</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>303</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>80</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>304</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>305</th>\n",
-       "      <td>0.0101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>330 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     learning_rate  max_depth  n_estimators     score     RMSLE\n",
-       "323         0.0101         12           100 -0.067918  0.260610\n",
-       "329         0.0101         16           100 -0.070137  0.264833\n",
-       "317         0.0101          8           100 -0.070760  0.266008\n",
-       "293         0.0091         12           100 -0.075226  0.274274\n",
-       "322         0.0101         12            90 -0.075273  0.274359\n",
-       "..             ...        ...           ...       ...       ...\n",
-       "301         0.0101          0            60       NaN       NaN\n",
-       "302         0.0101          0            70       NaN       NaN\n",
-       "303         0.0101          0            80       NaN       NaN\n",
-       "304         0.0101          0            90       NaN       NaN\n",
-       "305         0.0101          0           100       NaN       NaN\n",
-       "\n",
-       "[330 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1362,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1223,7 @@
        "                                                       n_estimators=800,\n",
        "                                                       random_state=2020)),\n",
        "                            ('xgb',\n",
-       "                             XGBRegressor(base_score=None, booster=None,...\n",
+       "                             XGBRegressor(base_score=None, booster='dart...\n",
        "                                          gpu_id=None, importance_type='gain',\n",
        "                                          interaction_constraints=None,\n",
        "                                          learning_rate=0.015,\n",
@@ -1399,7 +1240,7 @@
        "                                          verbosity=None))])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1248,7 @@
    "source": [
     "lightgbm = LGBMRegressor(learning_rate = 0.015, max_depth=12, n_estimators=950, random_state=random_state)\n",
     "gboost = GradientBoostingRegressor(learning_rate = 0.015, max_depth=12, n_estimators=800, random_state=random_state)\n",
-    "xgboost = XGBRegressor(learning_rate = 0.015, max_depth=12, n_estimators=900,random_state=random_state)\n",
+    "xgboost = XGBRegressor(learning_rate = 0.015, max_depth=12, n_estimators=900, booster = 'dart', random_state=random_state)\n",
     "rdforest = RandomForestRegressor(max_depth=545, n_estimators=500,random_state=random_state)\n",
     "models = [gboost, xgboost, lightgbm, rdforest]\n",
     "\n",
@@ -1474,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1357,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGBRegressor</th>\n",
-       "      <td>107192.180251</td>\n",
+       "      <td>108352.948491</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1527,10 +1368,10 @@
        "RandomForestRegressor      124814.371559\n",
        "GradientBoostingRegressor  124373.874988\n",
        "LGBMRegressor              108880.259594\n",
-       "XGBRegressor               107192.180251"
+       "XGBRegressor               108352.948491"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
